--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
-  "name": "nodi",
+  "name": "proj",
   "version": "1.0.0",
-  "description": "Nodi is a Telegram bot for monitoring and Logging your Bitcoin Full-Node. The Bot was designed to be used with the Raspi Blitz Project",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/d4niee/Nodi.git"
-  },
-  "author": "d4niee",
+  "type": "commonjs",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/d4niee/Nodi/issues"
+  "devDependencies": {
+    "@types/node": "^22.5.0",
+    "@types/node-telegram-bot-api": "^0.64.7",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
+    "eslint": "^9.9.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   },
-  "homepage": "https://github.com/d4niee/Nodi#readme",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "node-telegram-bot-api": "^0.66.0"
