--- a/.github/workflows/github-actions-nodi.yml
+++ b/.github/workflows/github-actions-nodi.yml
@@ -11,8 +11,5 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: yarn install
+      - run: yarn build
